--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/tracychan277/frontend-assessment#readme",
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "webpack": "^3.12.0"
   },
   "devDependencies": {
